<resources>
    <string name="app_name">Kalkulator</string>
    <string name="action_settings">Settings</string>
    <string name="calculator">Kalkulator</string>
    <string name="author">Mateusz Wieczorek</string>
    <string name="appDescription">Pierwsza wersja aplikacji stworzona w celu
        zapoznania sie z podstawowymi elementami interfejsu użytkownika</string>
    <string name="vibration">Vibration</string>
    <string name="sound">Sound</string>
    <string name="polish">Polish</string>
    <string name="english">English</string>
    <string name="language">Language</string>

</resources>
