<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.MainActivity"
    android:background="#000000">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#000000"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/vibration"
                android:id="@+id/vibration"
                android:background="#000000"
                android:textColor="#ffffff"
                android:textSize="20dp" />

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="vibrationSwitch"
                android:id="@+id/vibrationSwitch"
                android:layout_weight="2" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/sound"
                android:id="@+id/sound"
                android:background="#000000"
                android:textColor="#ffffff"
                android:textSize="20dp" />

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="soundSwitch"
                android:id="@+id/soundSwitch"
                android:layout_weight="2" />

        </LinearLayout>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/language"
            android:text="@string/language"
            android:textColor="#ffffff"
            android:textSize="20dp"
            android:textAlignment="center"
            android:layout_marginTop="20dp" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <RadioGroup
                android:id="@+id/languageRadioGroup"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/polish"
                    android:id="@+id/polishRadioButton"
                    android:textColor="#000000"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:background="#ffffff"
                    android:allowUndo="false" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/english"
                    android:id="@+id/englishRadioButton"
                    android:textColor="#000000"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:background="#ffffff" />
            </RadioGroup>
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>
